WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163326
Binding generated code for private operations should assert for casted-this checks
https://bugs.webkit.org/show_bug.cgi?id=163326
Summary
Binding generated code for private operations should assert for casted-this c...
youenn fablet
Reported
2016-10-12 03:05:28 PDT
Private operations can only be called by WebKit code. Since we control the call sites, the call sites should make sure to call the operations with the object of the right type.
Attachments
Patch
(9.24 KB, patch)
2016-10-12 03:21 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2016-10-12 03:21:47 PDT
Created
attachment 291348
[details]
Patch
youenn fablet
Comment 2
2016-10-12 08:42:26 PDT
(In reply to
comment #1
)
> Created
attachment 291348
[details]
> Patch
This patch makes sense from a technical point of view. But it requires to be careful on call sites. I am wondering whether it will not be too easy to miss the necessary check on call sites.
WebKit Commit Bot
Comment 3
2016-10-14 00:01:06 PDT
Comment on
attachment 291348
[details]
Patch Clearing flags on attachment: 291348 Committed
r207328
: <
http://trac.webkit.org/changeset/207328
>
WebKit Commit Bot
Comment 4
2016-10-14 00:01:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug